@@ -1,5 +1,7 @@
 2010-05-19  Doug Evans  <dje@google.com>
 
+	* python.c (gdbpy_print_stack): Ensure output ends with a newline.
+
 	* python.c (source_python_script): Add comment.
 	(source_python_script_for_objfile): Remove unnecessary call to
 	gdbpy_print_stack.
